R2.20.6    2018/11/02   Kukee Kim
           * build against evrClient R1.4.6 from support_evrClient branch

R2.20.5    2018/10/16   Kukhee Kim
           * build against evrClient R1.4.5 from support_evrClient branch

R2.20.4    2018/08/18   Kukhee Kim
           * build against evrClient R1.4.4 from support_evrClient branch

R2.20.3    2018/06/28   Kukhee Kim
           * build against evrClient R1.4.3 from support_evrClient branch

R2.20.2    2018/05/16   Kukhee Kim
           * build against evrClient R1.4.2

R2.20.1:   2018/05/10   Kukhee Kim
           * align with 
             - evrClient   R1.4.1
             - timingApi   R0.6
             - miscUtil    R2.2.5


support_evrClient:  2018/05/10  Kukhee Kim
                    Branch out to support evrClient instead of event module.
                    It is a temporal solution until we fully use timingApi.
                    We are going to use tag name R2.20.x for this branch.



R2.11.5:    2018/04/18  T. Straumann
    EVENT    -> R4.3.5
R2.11.4:    2018/04/18  K. Kim
    EVENT    -> R4.3.3

R2.11.3:    2018/03/20  T. Straumann
    EVENT     -> R4.3.1-BR-new_bsa_core
R2.11.2:    2018/03/20  T. Straumann
    TIMINGAPI -> R0.6
    EVENT     -> R4.3.0-BR-new_bsa_core
    DONT use EVRCLIENT
R2.11.0:    2018/03/20  T. Straumann
    drvPadUdpCommHWTime() always uses posix clock_gettime; removed variant
    that relied on EVR-specific code (ErGetTicks).

R2.10.0:    2017/06/06  H. Slepicka
    Bumped Event version to R4.2.9
    Bumped MiscUtils version to R2.2.5

R2.9.0:     2017/02/20  H. Slepicka
    Bumped EVENT version to R4.2.8.
    Changed name of CONFIG_SITE.Common.linuxRT* to remove glibc from it.

udpComm-R2-7-1: 2016/06/23 B. Hill
	Updated to miscUtils-R2-2-3 as the miscUtils-R2-2-2 libmiscUtils.a for linux-x86_64 and linuxRT
		has an undefined symbol S_ISDIR that should have been expanded as a macro.
	Build Linux targets against evrClient-R1-0-p7 and RTEMS targets against event-R4-2-4
