@@ -1,4 +1,9 @@
-R2.20.6    2018/11/02   Kukee Kim
+R2.20.7    2018/11/13   Kukhee Kim for Till Straumman
+           * fidProcess.c: Suppress error message when evrTimeGetFromPipeline fails
+              An evrSupport record already provides that information.
+           * build against evrClient R1.4.6 from support_evrClient branch
+
+R2.20.6    2018/11/02   Kukhee Kim
            * build against evrClient R1.4.6 from support_evrClient branch
 
 R2.20.5    2018/10/16   Kukhee Kim
